AEROGEAR-2541 Security check screen

--- a/Example/App.xaml
+++ b/Example/App.xaml
@@ -4,9 +4,9 @@
              x:Class="Example.App">
     <Application.Resources>
         <ResourceDictionary>
-            <Color x:Key="Primary">#d32f2f</Color>
+            <Color x:Key="Primary">#2e6980</Color>
             <Color x:Key="PrimaryDark">#23242d</Color>
-            <Color x:Key="Accent">#c62828</Color>
+            <Color x:Key="Accent">#e25027</Color>
             <Color x:Key="LightBackgroundColor">#FAFAFA</Color>
             <Color x:Key="DarkBackgroundColor">#C0C0C0</Color>
             <Color x:Key="MediumGrayTextColor">#4d4d4d</Color>
