--- a/Example/Views/Pages/SecurityCheckPage.xaml
+++ b/Example/Views/Pages/SecurityCheckPage.xaml
@@ -12,7 +12,7 @@
         <ListView x:Name="checkList" ItemsSource="{Binding CheckResults}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                   <TextCell Text="{Binding Name}" TextColor="{Binding DisplayColor}"/>
+                   <TextCell Text="{Binding Message}" TextColor="{Binding DisplayColor}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
