Added floating refresh button Fixed layout issue Updated xamarin

--- a/Example/Views/Pages/SecurityCheckPage.xaml
+++ b/Example/Views/Pages/SecurityCheckPage.xaml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- this page is displayed on start as first page -->
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Example.Views.Pages.SecurityCheckPage" Title="Detail" BackgroundColor="White">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:controls="clr-namespace:SuaveControls.Views;assembly=SuaveControls.FloatingActionButton"
+             x:Class="Example.Views.Pages.SecurityCheckPage" Title="Detail" BackgroundColor="White">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <OnPlatform x:Key="FAB.layoutBounds" x:TypeArguments="Rectangle">
+                <On Platform="iOS">0.9,0.9,-1,-1</On>
+                <On Platform="Android">1,1,-1,-1</On>
+            </OnPlatform>
+            <OnPlatform x:Key="FAB.buttonColor" x:TypeArguments="Color">
+                <On Platform="iOS">#B5BAC1</On>
+                <On Platform="Android">#E55332</On>
+            </OnPlatform>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <StackLayout VerticalOptions="StartAndExpand">
         <StackLayout BackgroundColor="{DynamicResource Primary}" HeightRequest="100">
             <StackLayout VerticalOptions="CenterAndExpand">
@@ -9,17 +26,32 @@
                 <Label HorizontalTextAlignment="Center" VerticalTextAlignment="Center" Text="{Binding CheckResults.Count, StringFormat='({0} Checks)'}" FontSize="Micro" HorizontalOptions="Fill" TextColor="White" />
             </StackLayout>
         </StackLayout>
-        <ListView x:Name="checkList" ItemsSource="{Binding CheckResults}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Padding="10, 5, 15, 5" Orientation="Horizontal" >
-                            <Image Source="{Binding Icon}"/>
-                            <Label Text="{Binding Message}" VerticalOptions="Center" TextColor="{Binding DisplayColor}"/>
-                        </StackLayout >
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <AbsoluteLayout x:Name="AbsoluteLayoutWidgets" Grid.Row="4" Padding="0">            
+            <ListView x:Name="checkList" ItemsSource="{Binding CheckResults}"
+                      AbsoluteLayout.LayoutFlags="All"
+                      AbsoluteLayout.LayoutBounds="0,0,1,1">
+                      
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Padding="10, 5, 15, 5" Orientation="Horizontal" >
+                                <Image Source="{Binding Icon}"/>
+                                <Label Text="{Binding Message}" VerticalOptions="Center" TextColor="{Binding DisplayColor}"/>
+                            </StackLayout >
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <controls:FloatingActionButton 
+                x:Name="FAB" HorizontalOptions="Center" 
+                VerticalOptions="CenterAndExpand" 
+                Image="ic_refresh"
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                AbsoluteLayout.LayoutBounds="{StaticResource FAB.layoutBounds}"
+                ButtonColor="{StaticResource FAB.buttonColor}"
+                Clicked="OnRefreshClicked"
+                />
+        </AbsoluteLayout>
     </StackLayout>
 </ContentPage>
