--- a/Example/Views/Pages/UserDetails.xaml
+++ b/Example/Views/Pages/UserDetails.xaml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms" xmlns:circleimg="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions" x:Class="Example.Views.Pages.UserDetails">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms" 
+             xmlns:circleimg="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin" 
+             x:Class="Example.Views.Pages.UserDetails">
     <ContentPage.Content>
         <RelativeLayout>
             <Image Source="ag_background.png" HorizontalOptions="FillAndExpand" Aspect="Fill" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid,Property=Width, Factor=1, Constant=0 }" RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid,Property=Height, Factor=0, Constant=0 }" />
