--- a/Example/Views/Pages/AuthPage.xaml
+++ b/Example/Views/Pages/AuthPage.xaml
@@ -6,25 +6,22 @@
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              x:Class="Example.Views.Pages.AuthPage">
     <ContentPage.Content>
-        <RelativeLayout>
+        <AbsoluteLayout>
             <Image Source="ag_background.png" 
-                HorizontalOptions="FillAndExpand"
-                VerticalOptions="FillAndExpand"
-                Aspect="Fill"
-                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid,Property=Width, Factor=1, Constant=0 }"
-                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid, Property=Height,Factor=1, Constant=0}"/>
+                AbsoluteLayout.LayoutFlags="PositionProportional"
+                AbsoluteLayout.LayoutBounds="0.5,0.5,1920,1080"/>
 
-            <StackLayout VerticalOptions="End"
-                HorizontalOptions="FillAndExpand"
-                RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid,Property=Width, Factor=1, Constant=0 }"
-                RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, ElementName=SearchControlsGrid, Property=Height,Factor=1, Constant=0}">
-                <Image Source="ic_openid.png" />
-                <Button Text="Authenticate" x:Name="authButton"
+            <Image Source="ic_openid.png" 
+                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                   AbsoluteLayout.LayoutBounds="0.5,0.5"/>
+
+            <Button Text="Authenticate" x:Name="authButton"
                     BackgroundColor="{DynamicResource Primary}"
                     TextColor="{DynamicResource InversePrimaryTextColor}"
                     Clicked="OnAuthenticateClicked"
+                    AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"
+                    AbsoluteLayout.LayoutBounds="0,0.66,1,40"
                 />
-            </StackLayout>
-        </RelativeLayout>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
