--- a/Example/Views/Pages/AuthPage.xaml
+++ b/Example/Views/Pages/AuthPage.xaml
@@ -6,7 +6,7 @@
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              x:Class="Example.Views.Pages.AuthPage">
     <ContentPage.Content>
-        <AbsoluteLayout>
+        <AbsoluteLayout Padding="20,0,20,0">
             <Image Source="ag_background.png" 
                 AbsoluteLayout.LayoutFlags="PositionProportional"
                 AbsoluteLayout.LayoutBounds="0.5,0.5,1920,1080"/>
