--- a/Example/Views/Pages/HomePage.xaml
+++ b/Example/Views/Pages/HomePage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Example.Views.Pages.HomePage"
-             Title="Detail">
+             Title="Home">
   <StackLayout Padding="10">
     <Label Text="Home!!!" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource PrimaryTextColor}"/>
   </StackLayout>
