--- a/Example/Views/Pages/UserDetails.xaml
+++ b/Example/Views/Pages/UserDetails.xaml
@@ -1,108 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Example.Views.Pages.UserDetails"
-             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
+             x:Class="Example.Views.Pages.UserDetails" 
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms" 
              xmlns:controls="clr-namespace:TwinTechsForms.NControl;assembly=TwinTechsForms.NControl.SvgImageView" 
              xmlns:utils="clr-namespace:Example.Utils" 
-             Title="Identity Profile"
-             BackgroundColor="#3b96b1"
-             x:Name="UserDetailsPage"
-             >
+             Title="Identity Profile" BackgroundColor="#3b96b1" x:Name="UserDetailsPage">
+    
+    <StackLayout VerticalOptions="FillAndExpand" Padding="0,0,0,0" Spacing="0">
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" BackgroundColor="White" Margin="10,10,10,0" Padding="0,0,0,0" Spacing="0">
+            <utils:TintedSvgImage TintColor="{DynamicResource Primary}" WidthRequest="30" HeightRequest="30" Source="resource://Example.Resources.person.svg" Margin="5,10,5,0" />
 
-        <StackLayout VerticalOptions="Start"
-                     Padding="0,0,0,0" 
-                     Spacing="0">
-            <StackLayout Orientation="Horizontal" 
-                         HorizontalOptions="FillAndExpand"
-                         BackgroundColor="White"
-                         Margin="10,10,10,0"
-                         Padding="0,0,0,0"
-                         Spacing="0">
-                <utils:TintedSvgImage TintColor="{DynamicResource Primary}"
-                                      WidthRequest="30" 
-                                      HeightRequest="30" 
-                                      Source="resource://Example.Resources.person.svg"
-                                      Margin="5,10,5,0"/>  
-                <StackLayout Spacing="0" 
-                             HorizontalOptions="FillAndExpand" 
-                             BackgroundColor="White">
-                    <Label Text="Full Name"  
-                           TextColor="{DynamicResource Primary}"
-                           FontSize="Micro"
-                           Margin="0,10,0,0"/>
-                    <Label Text="User1" 
-                           FontSize="Small"/>
+            <!--Full Name-->
+            <StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="White">
+                <Label Text="Full Name" TextColor="{DynamicResource Primary}" FontSize="Micro" Margin="0,10,0,0" />
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="{Binding CurrentUser.Firstname}" FontSize="Small" />
+                    <Label Text="{Binding CurrentUser.Lastname}" FontSize="Small" />
                 </StackLayout>
             </StackLayout>
-            <StackLayout Spacing="0"
-                         Margin="10,0,10,0"
-                         BackgroundColor="White">
-                <Label BackgroundColor="White" 
-                       TextColor="{DynamicResource Primary}"
-                       FontSize="Micro"
-                       Text="Email"
-                       Margin="10,10,10,0"/>
-                <Label BackgroundColor="White" 
-                       FontSize="Small"
-                       Text="user1@feedhenry.org"
-                       Margin="10,0,10,0"/>
-                <Label BackgroundColor="White" 
-                       TextColor="{DynamicResource Primary}"
-                       FontSize="Micro"
-                       Text="Username"
-                       Margin="10,10,10,0"/>
-                <Label BackgroundColor="White" 
-                       FontSize="Small"
-                       Text="user1 "
-                       Margin="10,0,10,0"/>
-                <Grid HorizontalOptions="FillAndExpand" Margin="10,10,10,10">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="30" />
-                    </Grid.ColumnDefinitions>
-                    <Label Text="OTP 2FA Enabled"
-                      FontSize="Small"
-                      Grid.Column="0"
-                      Grid.Row="0"
-                      VerticalOptions="Center"/>
-                    <utils:TintedSvgImage TintColor="Red"
-                                      WidthRequest="24" 
-                                      HeightRequest="24" 
-                                      Source="resource://Example.Resources.ic_close.svg"
-                                      Grid.Row="0"
-                                      Grid.Column="1"/>
-                    <Label Text="Email Verified"
-                      FontSize="Small"
-                      Grid.Column="0"
-                      Grid.Row="1"
-                      VerticalOptions="Center"/>
-                    <utils:TintedSvgImage TintColor="Red"
-                                      WidthRequest="24" 
-                                      HeightRequest="24" 
-                                      Source="resource://Example.Resources.ic_close.svg"
-                                      Grid.Row="1"
-                                      Grid.Column="1"/>
-                </Grid>
-            </StackLayout>
-            <StackLayout >
-                <ListView x:Name="lstRoles" Margin="10,10,10,0" ItemsSource="{Binding AssignedRoles}">
-                    <ListView.Header>
-                        <StackLayout HeightRequest="40" BackgroundColor="#f4f4f4" HorizontalOptions="FillAndExpand">
-                            <Label FontSize="Small" Text="Assigned Roles"  VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" Margin="10,0,0,0"/>
-                        </StackLayout>
-                    </ListView.Header>
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <Label Text="{Binding Name}" VerticalOptions="Center"/>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            
-            </StackLayout>
-            <Button Text="Logout" BackgroundColor="{DynamicResource Primary}" TextColor="White"/>
+        </StackLayout>
+        <StackLayout Spacing="0" Margin="10,0,10,0" BackgroundColor="White">
+
+            <!--Email-->
+            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="Email" Margin="10,10,10,0" />
+            <Label BackgroundColor="White" FontSize="Small" Text="{Binding CurrentUser.Email}" Margin="10,0,10,0" />
+
+            <!--Username-->
+            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="Username" Margin="10,10,10,0" />
+            <Label BackgroundColor="White" FontSize="Small" Text="{Binding CurrentUser.Username}" Margin="10,0,10,0" />
+            <Grid HorizontalOptions="FillAndExpand" Margin="10,10,10,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="30" />
+                </Grid.ColumnDefinitions>
+
+                <!--OTP 2FA Enabled-->
+                <Label Text="OTP 2FA Enabled" FontSize="Small" Grid.Column="0" Grid.Row="0" VerticalOptions="Center" />
+                <utils:TintedSvgImage TintColor="Red" WidthRequest="32" HeightRequest="32" Source="resource://Example.Resources.ic_close.svg" Grid.Row="0" Grid.Column="1" />
+
+                <!--Email Verified-->
+                <Label Text="Email Verified" FontSize="Small" Grid.Column="0" Grid.Row="1" VerticalOptions="Center" />
+                <utils:TintedSvgImage TintColor="Red" WidthRequest="32" HeightRequest="32" Source="resource://Example.Resources.ic_close.svg" Grid.Row="1" Grid.Column="1" />
+            </Grid>
         </StackLayout>
 
+        <!--Roles-->
+        <StackLayout>
+            <ListView x:Name="lstRoles" Margin="10,10,10,0" ItemsSource="{Binding AssignedRoles}" BackgroundColor="White" HeightRequest="128">
+                <ListView.Header>
+                    <StackLayout HeightRequest="40" BackgroundColor="#f4f4f4" HorizontalOptions="FillAndExpand">
+                        <Label FontSize="Small" Text="Assigned Roles" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" Margin="10,0,0,0" />
+                    </StackLayout>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Label Text="{Binding Name}" VerticalOptions="Center" Margin="10,0,10,0" />
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+
+        <!--Logout-->
+        <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand">
+            <Button Text="Logout" BackgroundColor="{DynamicResource Primary}" TextColor="White" VerticalOptions="End" Clicked="onLogoutClicked" />
+        </StackLayout>
+    </StackLayout>
 </ContentPage>
