--- a/Example/Views/Pages/UserDetails.xaml
+++ b/Example/Views/Pages/UserDetails.xaml
@@ -5,6 +5,7 @@
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms" 
              xmlns:controls="clr-namespace:TwinTechsForms.NControl;assembly=TwinTechsForms.NControl.SvgImageView" 
              xmlns:utils="clr-namespace:Example.Utils" 
+             xmlns:s="clr-namespace:Example.Utils;assembly=Example"
              Title="Identity Profile" BackgroundColor="#3b96b1" x:Name="UserDetailsPage">
     
     <StackLayout VerticalOptions="FillAndExpand" Padding="0,0,0,0" Spacing="0">
@@ -13,7 +14,7 @@
 
             <!--Full Name-->
             <StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="White">
-                <Label Text="Full Name" TextColor="{DynamicResource Primary}" FontSize="Micro" Margin="0,10,0,0" />
+                <Label Text="{s:StringResource auth.userDetails.FullName}" TextColor="{DynamicResource Primary}" FontSize="Micro" Margin="0,10,0,0" />
                 <StackLayout Orientation="Horizontal">
                     <Label Text="{Binding CurrentUser.Firstname}" FontSize="Small" />
                     <Label Text="{Binding CurrentUser.Lastname}" FontSize="Small" />
@@ -23,36 +24,19 @@
         <StackLayout Spacing="0" Margin="10,0,10,0" BackgroundColor="White">
 
             <!--Email-->
-            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="Email" Margin="10,10,10,0" />
+            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="{s:StringResource auth.userDetails.Email}" Margin="10,10,10,0" />
             <Label BackgroundColor="White" FontSize="Small" Text="{Binding CurrentUser.Email}" Margin="10,0,10,0" />
 
             <!--Username-->
-            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="Username" Margin="10,10,10,0" />
-            <Label BackgroundColor="White" FontSize="Small" Text="{Binding CurrentUser.Username}" Margin="10,0,10,0" />
-            <Grid HorizontalOptions="FillAndExpand" Margin="10,10,10,10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="30" />
-                </Grid.ColumnDefinitions>
-
-                <!--OTP 2FA Enabled-->
-                <Label Text="OTP 2FA Enabled" FontSize="Small" Grid.Column="0" Grid.Row="0" VerticalOptions="Center" />
-                <!--hard coded for now, need to fix this in the future once the info is available from the auth sdk-->
-                <utils:TintedSvgImage TintColor="Red" WidthRequest="32" HeightRequest="32" Source="resource://Example.Resources.ic_close.svg" Grid.Row="0" Grid.Column="1" />
-
-                <!--Email Verified-->
-                <Label Text="Email Verified" FontSize="Small" Grid.Column="0" Grid.Row="1" VerticalOptions="Center" />
-                <!--hard coded for now, need to fix this in the future once the info is available from the auth sdk-->
-                <utils:TintedSvgImage TintColor="Red" WidthRequest="32" HeightRequest="32" Source="resource://Example.Resources.ic_close.svg" Grid.Row="1" Grid.Column="1" />
-            </Grid>
+            <Label BackgroundColor="White" TextColor="{DynamicResource Primary}" FontSize="Micro" Text="{s:StringResource auth.userDetails.Username}" Margin="10,10,10,0" />
+            <Label BackgroundColor="White" FontSize="Small" Text="{Binding CurrentUser.Username}" Margin="10,0,10,10" />
         </StackLayout>
-
         <!--Roles-->
         <StackLayout>
             <ListView x:Name="lstRoles" Margin="10,10,10,0" ItemsSource="{Binding AssignedRoles}" BackgroundColor="White" HeightRequest="128">
                 <ListView.Header>
                     <StackLayout HeightRequest="40" BackgroundColor="#f4f4f4" HorizontalOptions="FillAndExpand">
-                        <Label FontSize="Small" Text="Assigned Roles" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" Margin="10,0,0,0" />
+                        <Label FontSize="Small" Text="{s:StringResource auth.userDetails.AssignedRoles}" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" Margin="10,0,0,0" />
                     </StackLayout>
                 </ListView.Header>
                 <ListView.ItemTemplate>
@@ -67,7 +51,7 @@
 
         <!--Logout-->
         <StackLayout VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand" Padding="0,0,0,0" Spacing="0">
-            <Button Text="Logout" BackgroundColor="{DynamicResource Primary}" TextColor="White" VerticalOptions="End" Clicked="onLogoutClicked" BorderRadius="0"/>
+            <Button Text="{s:StringResource auth.Logout}" BackgroundColor="{DynamicResource Primary}" TextColor="White" VerticalOptions="End" Clicked="onLogoutClicked" BorderRadius="0"/>
         </StackLayout>
     </StackLayout>
 </ContentPage>
