--- a/Example/Views/Pages/LandingPage.xaml
+++ b/Example/Views/Pages/LandingPage.xaml
@@ -7,13 +7,9 @@
              xmlns:s="clr-namespace:Example.Utils;assembly=Example"
              xmlns:htmlLabel="clr-namespace:Plugin.HtmlLabel;assembly=Plugin.HtmlLabel"
              >
-    <ScrollView>
-        <StackLayout Padding="48">
-            <StackLayout VerticalOptions="CenterAndExpand">
+        <StackLayout Padding="48" >
                 <ffimageloadingsvg:SvgCachedImage Source="resource://Example.Resources.aerogear_logo.svg" HorizontalOptions="Center" />
                 <Label Text="{Binding Subtitle}" x:Name="LabelSubtitle"  FontSize="Large" FontAttributes="Bold" Margin="0,48,0,0" XAlign="Center" HorizontalOptions="Center" TextColor="{DynamicResource MediumGrayTextColor}" />
-                <htmlLabel:HtmlLabel Text="{Binding TextContent}" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource MediumGrayTextColor}" Margin="0,16,0,0" XAlign="Center" />
-            </StackLayout>
+                <WebView x:Name="WebView" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0,16,0,0" />
         </StackLayout>
-    </ScrollView>
 </ContentPage>
