--- a/Example/Views/Pages/LandingPage.xaml
+++ b/Example/Views/Pages/LandingPage.xaml
@@ -6,6 +6,7 @@
              xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              xmlns:s="clr-namespace:Example.Utils;assembly=Example"
              xmlns:htmlLabel="clr-namespace:Plugin.HtmlLabel;assembly=Plugin.HtmlLabel"
+             BackgroundColor="{StaticResource LightBackgroundColor}"
              >
         <StackLayout Padding="48,48,48,0" >
                 <ffimageloadingsvg:SvgCachedImage Source="resource://Example.Resources.aerogear_logo.svg" HorizontalOptions="Center" />
