--- a/Example/Views/DrawerMenuPage.xaml
+++ b/Example/Views/DrawerMenuPage.xaml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="Example.Views.DrawerMenuPage" 
-             xmlns:controls="clr-namespace:TwinTechsForms.NControl;assembly=TwinTechsForms.NControl.SvgImageView" 
-             xmlns:masterpages="clr-namespace:Example.Views" 
-             xmlns:utils="clr-namespace:Example.Utils" 
-             Title="{DynamicResource AppName}">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Example.Views.DrawerMenuPage" xmlns:controls="clr-namespace:TwinTechsForms.NControl;assembly=TwinTechsForms.NControl.SvgImageView" xmlns:masterpages="clr-namespace:Example.Views" xmlns:utils="clr-namespace:Example.Utils" Title="{DynamicResource AppName}">
     <StackLayout>
         <ListView x:Name="MenuItemsListView" SeparatorVisibility="None" HasUnevenRows="true" ItemsSource="{Binding NavigationItems}">
             <ListView.Header>
@@ -21,7 +15,7 @@
                             </Grid.ColumnDefinitions>
                             <utils:TintedSvgImage TintColor="{Binding SelectedColor}" WidthRequest="24" HeightRequest="24" HorizontalOptions="Center" VerticalOptions="Center" Source="{Binding Icon}">
                             </utils:TintedSvgImage>
-                            <Label Grid.Column="2" VerticalOptions="Fill" VerticalTextAlignment="Center" FontAttributes="{Binding FontAttributes}" Text="{Binding Title}" FontSize="14" TextColor="{Binding SelectedColor}" />
+                            <Label Grid.Column="2" VerticalOptions="Fill" VerticalTextAlignment="Center" FontAttributes="{Binding FontAttributes}" Text="{Binding Title}" FontSize="{Binding FontSize}" TextColor="{Binding SelectedColor}" Margin="{Binding AdditionalPadding}" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
